feat: vlm